--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/WebGLTestOG.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGLTestOG.data.gz",
-        frameworkUrl: buildUrl + "/WebGLTestOG.framework.js.gz",
-        codeUrl: buildUrl + "/WebGLTestOG.wasm.gz",
+        dataUrl: buildUrl + "/WebGLTestOG.data",
+        frameworkUrl: buildUrl + "/WebGLTestOG.framework.js",
+        codeUrl: buildUrl + "/WebGLTestOG.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "VideoPlayer",
