--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | OGAssetsCopyFirst</title>
+    <title>Unity WebGL Player | VideoPlayerOpenCVFaceMask</title>
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
     <canvas id="unity-canvas" width=960 height=600 tabindex="-1" style="width: 960px; height: 600px; background: #231F20"></canvas>
-    <script src="Build/WebGLTestOG.loader.js"></script>
+    <script src="Build/WebGLTestOG2.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -25,13 +25,12 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/WebGLTestOG.data",
-        frameworkUrl: "Build/WebGLTestOG.framework.js",
-        workerUrl: "Build/WebGLTestOG.worker.js",
-        codeUrl: "Build/WebGLTestOG.wasm",
+        dataUrl: "Build/WebGLTestOG2.data",
+        frameworkUrl: "Build/WebGLTestOG2.framework.js",
+        codeUrl: "Build/WebGLTestOG2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "OGAssetsCopyFirst",
+        productName: "VideoPlayerOpenCVFaceMask",
         productVersion: "1.1.0",
         // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
         // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
