--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 <label for="fileToUpload">
                     <img src="FileBrowser/select_button.png" style="position: fixed; top: 45%; right: 0; bottom: 0; left: 0; margin: auto; width: 30%; height: 40px;" />
-                    <strong id="fb_popup_select_button_title" style="position: fixed; top: 45%; right: 0; bottom: 0; left: 0; text-align: center; text-size-adjust: auto; margin: auto; width: 30%; height: 20px; color: black;">
+                    <strong id="fb_popup_select_button_title" style="font-family:Arial; position: fixed; top: 45%; right: 0; bottom: 0; left: 0; text-align: center; text-size-adjust: auto; margin: auto; width: 30%; height: 20px; color: black;">
                         Continue
                     </strong>
                 </label>
